# metronome

./: .gitmodules  CMakeLists.txt  CMakePresets.json  ConfigSTM32F746-debug.cmd  ConfigSTM32F746-release.cmd  ConfigSTM32F767-debug.cmd  ConfigSTM32F767-release.cmd  ConfigVisualStudio.cmd  StartSTM32CubeIDE 1.4.cmd  StartSTM32CubeIDE.cmd  antora-playbook.yml  release-please-config.json  toolchain-arm-gcc.cmake
.github/workflows/: ci.yml  release-please.yml
file_extractor/main/: CMakeLists.txt  Main.cpp  file_extractor.cmake
local_hal/: CMakeLists.txt
local_hal/stm32fxxx/: CMakeLists.txt  SaiStm.cpp  SaiStm.hpp
metronome/: CMakeLists.txt
metronome/application/: BeatController.cpp  BeatController.hpp  BeatControllerImpl.cpp  BeatControllerImpl.hpp  BeatPainter.cpp  BeatPainter.hpp  BpmSelectionInteractor.cpp  BpmSelectionInteractor.hpp  CMakeLists.txt  Ds3231.cpp  Ds3231.hpp  Metronome.cpp  Metronome.hpp  NoteFont.cpp  NotesMidi.cpp  NotesMidi.hpp  StuckI2cReleaser.cpp  StuckI2cReleaser.hpp  TouchFt5x06.cpp  TouchFt5x06.hpp  ViewBeatsPerMeasure.cpp  ViewBeatsPerMeasure.hpp  ViewBpm.cpp  ViewBpm.hpp  ViewDateEntry.cpp  ViewNoteKind.cpp  ViewNoteKind.hpp  ViewPainterMetronome.cpp  ViewPainterMetronome.hpp  ViewSprocket.cpp  ViewStart.cpp  ViewStart.hpp  ViewTapMeasurement.cpp  ViewTapMeasurement.hpp  ViewTimeline.cpp  Wm8994.cpp  Wm8994.hpp
metronome/instantiations/: CMakeLists.txt  Metronome.cpp  Metronome.hpp
metronome/interfaces/: BeatController.hpp  BeatTimer.hpp  BpmSelection.hpp  CMakeLists.txt  MetronomePainter.hpp  Notes.hpp
metronome/main_stm32f746/: CMakeLists.txt  Flash.cpp  Flash.hpp  Lcd.cpp  Lcd.hpp  LowPowerTimer.cpp  LowPowerTimer.hpp  Main.cpp  MetronomeBeatTimerStm.cpp  MetronomeBeatTimerStm.hpp  PeripheralI2c.hpp  Rtc.hpp  Sai.cpp  Sai.hpp  SdStm.cpp  SdStm.hpp  Touch.cpp  Touch.hpp  Tracer.cpp  Tracer.hpp
metronome/main_win/: CMakeLists.txt  DoubleBufferDisplayAdaptedFromDirectDisplay.cpp  DoubleBufferDisplayAdaptedFromDirectDisplay.hpp  Main.cpp  MultiBufferDisplayAdaptedFromDirectDisplay.cpp  MultiBufferDisplayAdaptedFromDirectDisplay.hpp
metronome/views/: CMakeLists.txt  NoteFont.cpp  NoteFont.hpp  ViewBeatsPerMeasure.cpp  ViewBpm.cpp  ViewBpm.hpp  ViewDateEntry.cpp  ViewDateEntry.hpp  ViewGap.cpp  ViewGap.hpp  ViewNoteKind.cpp  ViewNoteKind.hpp  ViewPainterMetronome.cpp  ViewPainterMetronome.hpp  ViewSprocket.cpp  ViewSprocket.hpp  ViewStart.cpp  ViewStart.hpp  ViewTapMeasurement.cpp  ViewTapMeasurement.hpp  ViewTimeline.cpp  ViewTimeline.hpp
visualizer/: CMakeLists.txt
visualizer/main_win/: CMakeLists.txt  Main.cpp
